--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 
-/* universal style */
+/*-------------------------------
+ universal style 
+ -------------------------------*/
 
 *{
     margin: 0;
@@ -11,24 +13,11 @@
 }
 
 
-.button{
-    background-color: #DD0000;
-    padding: 15px 25px;
-    border-radius: 10px;
-    font-size: 20px;
-    color:  #FFFFFF;
-    text-decoration: none;
-}
 
-.fa-greater-than{
-    margin-left: 10px;
-    font-size: 20px;
-
-}
 
 
 /*------------------------------
-    header style 
+    header style start
 --------------------------------*/
 
 header{
@@ -65,10 +54,175 @@ header{
     margin-bottom: 50px;
 }
 
+.button{
+    background-color: #DD0000;
+    padding: 15px 25px;
+    border-radius: 10px;
+    font-size: 20px;
+    color:  #FFFFFF;
+    text-decoration: none;
+}
+
+.fa-greater-than{
+    margin-left: 10px;
+    font-size: 20px;
+
+}
+
 .header-img{
     width: 50%;
 }
 
 .header-img img{
     width: 100%;
+}
+
+
+
+/*------------------------------
+    header style end
+--------------------------------*/
+
+
+/*----------------------------------
+    manuber boxes container starts
+--------------------------------====*/
+
+.manuber-boxes-container{
+    display: flex;
+    column-gap: 20px;
+    margin: 0 60px;
+    margin-top: 30px;
+    margin-bottom: 100px;
+}
+
+.manuber-container{
+    width: 312px;
+    height: 312px;
+    background-color: #161616;
+    border-radius: 10px;
+    padding: 18px;
+    justify-content: space-around;
+    display: flex;
+    flex-direction: column;
+}
+.manuber-container a{
+    border-radius: 10px;
+    color: #161616;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 20px;
+    width: 252px;
+    height: 64px;
+    align-items: center;
+    justify-content: center;
+    display: flex;;
+    background-color: #FFFFFF;
+    margin: 10px;
+    
+    
+}
+
+#blog{
+    background-color: #DD0000;
+    color: #FFFFFF;
+}
+
+.boxes-container{
+    display: flex;
+    flex-grow: 1;
+   
+}
+
+.all-boxes{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+
+.box{
+    border-radius: 5px; 
+    box-shadow: 4px 8px 16px rgb(206, 204, 204);
+}
+
+.box-img img{
+    width: 312px;
+    height: 175px;
+    width: 100%;
+}
+
+.box-description{
+    padding: 10px;
+}
+
+.box-description h3{
+    font-weight: 500;
+    font-size: 16px;
+    border: 1px solid #161616;
+    width: 100px;
+    justify-content: center;
+    display: flex;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+.box-description h2{
+    font-weight: 600;
+    font-size: 15px;
+    margin-bottom: 10px;
+}
+
+.duration{
+    display: flex;
+    width: 143px;
+    height: 26px;
+    justify-content: space-between;
+}
+
+
+/*-----------------------------------------
+    manuber boxes container starts end
+------------------------------------------*/
+
+
+
+/*----------------------------------
+    footer start
+--------------------------------====*/
+
+
+footer{
+    background-color: #161616;
+    padding: 90px 0;
+}
+
+.footer-description{
+   align-items: center;
+   justify-content: center;
+   display: flex;
+   flex-direction: column;
+}
+
+.footer-description h1{
+    color: #FFFFFF;
+    margin-bottom: 50px;
+}
+
+.footer-manu{
+    margin-bottom: 60px;
+}
+
+.footer-manu a{
+    margin: 20px;
+    font-size: 17px;
+    color: #FFFFFF;
+    text-decoration: none;
+
+
+}
+
+.social-link a{
+    color: #FFFFFF;
+    font-size: 26px;
+    margin: 30px;
 }
