--- a/style.css
+++ b/style.css
@@ -153,23 +153,24 @@ header{
 
 .box-description{
     padding: 10px;
+    margin-top: 15px;
 }
 
 .box-description h3{
     font-weight: 500;
-    font-size: 16px;
     border: 1px solid #161616;
+    font-size: 22px;
+    padding: 5px 10px;
     width: 100px;
     justify-content: center;
     display: flex;
     border-radius: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 .box-description h2{
     font-weight: 600;
-    font-size: 15px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 
 .duration{
@@ -177,7 +178,7 @@ header{
     width: 143px;
     height: 26px;
     justify-content: space-between;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 
@@ -322,7 +323,66 @@ footer{
 }
 
 
-
-
     
+ }
+
+
+
+ /* tablet responsive */
+
+
+ @media screen and (min-width: 689px) and (max-width: 992px) {
+    
+/*----------------------------------
+    manuber boxes container starts
+--------------------------------====*/
+
+.manuber-boxes-container{
+
+    display: flex;
+    flex-direction: column;
+    /* background-color: beige; */
+    
+}
+
+.manuber-container{
+    width: 95%;
+    height: 50%;
+    background-color: #FFFFFF;
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 50px;
+}
+.manuber-container a{
+
+    border: 1px solid #161616;
+    padding: 0 10px;
+    
+}
+
+
+
+.boxes-container{
+    display: flex;
+   
+}
+
+.all-boxes{
+
+    grid-template-columns: repeat(2, 1fr);
+    gap: 30px;
+}
+
+.box{
+    border-radius: 5px; 
+    box-shadow: 4px 8px 16px rgb(206, 204, 204);
+}
+
+.box-img img{
+    width: 312px;
+    height: 175px;
+    width: 100%;
+}
+
+
  }
