--- a/style.css
+++ b/style.css
@@ -176,9 +176,10 @@ header{
 }
 
 .box-description h2{
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 600;
-    margin-bottom: 30px;
+    margin-bottom: 25px;
+    text-align: justify;
 }
 
 .duration{
